0026262: mixing qvector.h and math_Memory.hxx won't compile

Files math_Memory.cxx and .hxx removed: function memmove() should be available on all modern platforms in standard C library