src/BlendFunc/BlendFunc_Tensor.cxx
@@ -19,8 +19,6 @@
 #include <TColStd_Array1OfReal.hxx>
 #include <math_Vector.hxx>
 #include <math_Matrix.hxx>
-//#include <math_StackMemoryManager.hxx>
-//#include <math_Memory.hxx>
 
 BlendFunc_Tensor::BlendFunc_Tensor(const Standard_Integer NbRow, 
 				   const Standard_Integer NbCol, 
